# rust-web-dev

./: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
data/: initdb.sql
examples/: http_example.rs  sqlx_example.rs
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
migrations/: 20241013074421_questions_table.up.sql  20241013074812_answers_table.up.sql  20241015045721_create_accounts_table.down.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  lib.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  mod.rs  question.rs
src/types/: account.rs  answer.rs  mod.rs  pagination.rs  question.rs
