[package]
name = "rust-web-dev"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["handle-errors", "integration-tests", "mock-server"]

[dependencies]
warp = "0.3.7"
tokio = { version = "1.40.0", features = ["full"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

handle-errors = { path = "handle-errors", version = "0.1.0" }


tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "postgres",
] }

reqwest = { version = "0.12.8", features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"

rand = "0.8.5"
rust-argon2 = "2.1.0"
paseto = "2.0.2"
chrono = "0.4.38"

clap = { version = "4.5.20", features = ["derive"] }
dotenvy = "0.15.7"

[build-dependencies]
platforms = "2.0.0"

[dev-dependencies]
mock-server = { path = "mock-server", version = "0.1.0" }
