[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-web-dev = { path = "../", version = "0.1.0" }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
futures-util = "0.3.31"
